samples/_failures_safe/1761526966_bc995d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b474224.c: In function ‘main’:
./samples/SAFE/__tmp_6b474224.c:155:17: error: expected declaration or statement at end of input
  155 |                 }
      |                 ^
./samples/SAFE/__tmp_6b474224.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b474224.c:155:17: error: expected declaration or statement at end of input
